--- a/LongStringLoader/app/build.gradle
+++ b/LongStringLoader/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
+
 
 android {
     compileSdkVersion 24
@@ -62,3 +64,22 @@ createJars.dependsOn(clean, build, createSourcesJar, createJavaDocJar)
 createJavaDocJar.mustRunAfter build
 createSourcesJar.mustRunAfter build
 build.mustRunAfter clean
+
+task createPom << {
+    pom {
+        project {
+            groupId 'com.penrillian'
+            artifactId 'longstringloader'
+            version android.defaultConfig.versionName
+
+            inceptionYear '2016'
+            licenses {
+                license {
+                    name 'The Apache Software License, Version 2.0'
+                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    distribution 'repo'
+                }
+            }
+        }
+    }.writeTo("build/pom.xml")
+}
