--- a/exampleApp/LongStringLoaderExample/app/build.gradle
+++ b/exampleApp/LongStringLoaderExample/app/build.gradle
@@ -20,9 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile project(path: ':longStringLoader')
+    compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.android.gms:play-services-maps:9.4.0'
+    compile 'com.penrillian:longstringloader:0.0.1-beta'
 }
