--- a/LongStringLoader/longstringloader/build.gradle
+++ b/LongStringLoader/longstringloader/build.gradle
@@ -103,10 +103,11 @@ bintray {
     configurations = ['archives']
     pkg {
         repo = "penrillian-maven"
+        userOrg = "penrillian"
         name = "LongStringLoader"
         websiteUrl = siteUrl
         vcsUrl = gitUrl
         licenses = ["Apache-2.0"]
-        publish = true
+        publish = false
     }
 }
