--- a/LongStringLoader/longstringloader/build.gradle
+++ b/LongStringLoader/longstringloader/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'com.jfrog.bintray'
 def siteUrl = 'https://github.com/Penrillian/LongStringLoader'      // Homepage URL of the library
 def gitUrl = 'https://github.com/Penrillian/LongStringLoader.git'   // Git repository URL
 group = "com.penrillian"
-version = "0.0.1-beta"
+version = "0.0.2-beta"
 
 install {
     repositories.mavenInstaller {
@@ -94,7 +94,12 @@ artifacts {
 }
 
 Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
+try {
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+} catch (Exception ignored) {
+    properties.put("bintray.user", System.env.BINTRAY_USER)
+    properties.put("bintray.apikey", System.env.BINTRAY_APIKEY)
+}
 
 bintray {
     user = properties.getProperty("bintray.user")
