--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: required
 before_install:
  - chmod +x gradlew
  
-script: ./gradlew :longstringloader:test
+script: ./gradlew build :longstringloader:test
 
 android:
   components:
