--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: android
 
-sudo: required
-
 before_install:
  - chmod +x gradlew
  
-script: ./gradlew build :longstringloader:test
+script: ./gradlew :longstringloader:test
 
 android:
   components:
