--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: android
 
 before_install:
  - chmod +x gradlew
- 
-script: ./gradlew :longstringloader:test
+ - wget http://services.gradle.org/distributions/gradle-2.10-bin.zip
+ - unzip gradle-2.10-bin.zip
+ - export GRADLE_HOME=$PWD/gradle-2.10
+ - export PATH=$GRADLE_HOME/bin:$PATH
+
+script: gradle :longstringloader:test
 
 #android:
 #  components:
