Fixing travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: android
 before_install:
  - chmod +x gradlew
 
-script: gradle :longstringloader:test
+script: gradlew :longstringloader:test
 
 #android:
 #  components:
