--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,16 @@
 language: android
+jdk: oraclejdk8
+sudo: false
+
+android:
+  components:
+    - platform-tools
+    - tools
+    - build-tools-24.0.2
+    - android-24
+    - extra-android-m2repository
 
 before_install:
  - chmod +x gradlew
 
-jdk: oraclejdk8
-
-script: ./gradlew build :longstringloader:test
-
-android:
-  components:
-     # Uncomment the lines below if you want to
-     # use the latest revision of Android SDK Tools
-    - platform-tools
-    - tools
-
-    # The BuildTools version used by your project
-    - build-tools-24.0.2
-
-    # The SDK version used to compile your project
-    - android-24
-
+script: ./gradlew test
