--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ android:
     - extra-android-m2repository
 before_install:
  - chmod +x gradlew
-script: ./gradlew test --debug
+script: ./gradlew test --stacktrace
