--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ android:
     - tools
     - build-tools-24.0.2
     - android-24
+    - extra-android-m2repository
 before_install:
  - chmod +x gradlew
 script: ./gradlew test
