--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: android
 jdk: oraclejdk8
-#android:
-#  components:
-#    - platform-tools
-#    - tools
-#    - build-tools-24.0.2
-#    - android-24
-#    - extra-android-m2repository
+android:
+  components:
+    - platform-tools
+    - tools
+    - build-tools-24.0.2
+    - android-24
+    - extra-android-m2repository
 before_install:
  - chmod +x gradlew
 script: ./gradlew test
