--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ android:
     - extra-android-m2repository
 before_install:
  - chmod +x gradlew
-script: ./gradlew test
+script: ./gradlew :lsl:test
