--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ android:
 before_install:
  - chmod +x gradlew
 script: ./gradlew test
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
