--- a/longstringloader/build.gradle
+++ b/longstringloader/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
+apply plugin: 'jacoco-android'
 
 def siteUrl = 'https://github.com/Penrillian/LongStringLoader'      // Homepage URL of the library
 def gitUrl = 'https://github.com/Penrillian/LongStringLoader.git'   // Git repository URL
@@ -18,6 +19,7 @@ android {
         versionName version
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
+
     buildTypes {
         release {
             minifyEnabled false
