--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ android:
     - extra-android-m2repository
 before_install:
  - chmod +x gradlew
-script: ./gradlew jacocoTestReport
+script: ./gradlew jacocoTestReleaseUnitTestReport
 after_success:
   - bash <(curl -s https://codecov.io/bash)
