--- a/longstringloader/build.gradle
+++ b/longstringloader/build.gradle
@@ -32,16 +32,21 @@ android {
     }
 }
 
+configurations {
+    javadocDeps
+}
+
 dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:support-annotations:24.2.1'
+    javadocDeps 'com.android.support:support-annotations:24.2.1'
 }
 
 install {
     repositories.mavenInstaller {
         pom {
-
             project {
                 packaging 'aar'
 
@@ -81,6 +86,7 @@ task sourcesJar(type: Jar) {
 task javadoc(type: Javadoc) {
     source = android.sourceSets.main.java.srcDirs
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    classpath += configurations.javadocDeps
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
