--- a/longstringloader/build.gradle
+++ b/longstringloader/build.gradle
@@ -100,15 +100,8 @@ artifacts {
 }
 
 bintray {
-    Properties properties = new Properties()
-    try {
-        properties.load(project.rootProject.file('local.properties').newDataInputStream())
-    } catch (Exception ignored) {
-        properties.put('bintray.user', System.env.BINTRAY_USER)
-        properties.put('bintray.apikey', System.env.BINTRAY_APIKEY)
-    }
-    user = properties.getProperty('bintray.user')
-    key = properties.getProperty('bintray.apikey')
+    user = System.env.BINTRAY_USER
+    key = System.env.BINTRAY_APIKEY
 
     configurations = ['archives']
     pkg {
