--- a/exampleApp/LongStringLoaderExample/app/build.gradle
+++ b/exampleApp/LongStringLoaderExample/app/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.android.gms:play-services-maps:9.6.1'
-    compile 'com.penrillian:longstringloader:0.0.2-beta'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
 }
