--- a/exampleApp/LongStringLoaderExample/app/build.gradle
+++ b/exampleApp/LongStringLoaderExample/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.android.gms:play-services-maps:9.6.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.penrillian:longstringloader:0.0.5-beta'
 }
