--- a/exampleApp/LongStringLoaderExample/app/src/main/AndroidManifest.xml
+++ b/exampleApp/LongStringLoaderExample/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
         <activity android:name=".RecyclerViewExampleActivity">
         </activity>
+        <activity android:name=".RecyclerViewExampleFragmentActivity">
+        </activity>
     </application>
 
 </manifest>
