fixing member name regex

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,6 +3,11 @@ engines:
     enabled: true
   checkstyle:
     enabled: true
+	checks:
+		com.puppycrawl.tools.checkstyle.checks.sizes.LineLengthCheck:
+			enabled: false
+		com.puppycrawl.tools.checkstyle.checks.naming.MemberNameCheck:
+			format: "^[a-z][a-z0-9][a-zA-Z0-9]*$"
     channel: "beta"
   pmd:
     enabled: true
@@ -12,3 +17,12 @@ ratings:
   - "**.java"
 exclude_paths:
 - "**/test/**/*"
+
+
+
+
+
+
+
+
+
