--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,6 +7,7 @@ engines:
       com.puppycrawl.tools.checkstyle.checks.sizes.LineLengthCheck:
         enabled: false
       com.puppycrawl.tools.checkstyle.checks.naming.MemberNameCheck:
+        enabled: true
         format: "^[a-z][a-z0-9][a-zA-Z0-9]*$"
     channel: "beta"
   pmd:
