fixing member name regex

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,7 +8,7 @@ engines:
         enabled: false
       com.puppycrawl.tools.checkstyle.checks.naming.MemberNameCheck:
         enabled: true
-        format: "^[a-z][a-z0-9][a-zA-Z0-9]*$"
+        format: "^[a-z][a-zA-Z0-9]*$"
     channel: "beta"
   pmd:
     enabled: true
