--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -14,6 +14,10 @@ engines:
         enabled: false
       com.puppycrawl.tools.checkstyle.checks.naming.ParameterNameCheck:
         enabled: false
+      com.puppycrawl.tools.checkstyle.checks.naming.LocalVariableNameCheck:
+        enabled: false
+      com.puppycrawl.tools.checkstyle.checks.whitespace.EmptyLineSeparatorCheck:
+        enabled: false
     channel: "beta"
   pmd:
     enabled: true
