--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,7 +8,7 @@ engines:
         enabled: false
       com.puppycrawl.tools.checkstyle.checks.naming.MemberNameCheck:
         enabled: true
-        config: "<module name=\"MemberName\"> <property name=\"format\" value=\"^[a-z][a-zA-Z0-9]*$\"/> <message key=\"name.invalidPattern\" value=\"Member name ''{0}'' must match pattern ''{1}''.\"/> </module>"
+        config: ".checkstyle.xml"
       com.puppycrawl.tools.checkstyle.checks.javadoc.SummaryJavadocCheck:
         enabled: false
       com.puppycrawl.tools.checkstyle.checks.javadoc.JavadocMethodCheck:
