bd: configuring checkstyle member name regex

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,6 +4,7 @@ engines:
   checkstyle:
     enabled: true
     checks:
+      enabled: true
       config: "checkstyle.xml"
       com.puppycrawl.tools.checkstyle.checks.sizes.LineLengthCheck:
         enabled: false
