bd: debugging MemberNames check. Does the enable/disable in the codeclimate.yml file actually work

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,8 +7,8 @@ engines:
     checks:
       com.puppycrawl.tools.checkstyle.checks.sizes.LineLengthCheck:
         enabled: false
-#      com.puppycrawl.tools.checkstyle.checks.sizes.MemberNames:
-#        enabled: false
+      com.puppycrawl.tools.checkstyle.checks.sizes.MemberNames:
+        enabled: false
       com.puppycrawl.tools.checkstyle.checks.javadoc.SummaryJavadocCheck:
         enabled: false
       com.puppycrawl.tools.checkstyle.checks.javadoc.JavadocMethodCheck:
